# klgl

./: klgl.package.json  yae_package.json
benchmarks/mat_mul_sse/: CMakeLists.txt  klgl_matmul_sse_benchmark.module.json
benchmarks/mat_mul_sse/code/private/: matmul_sse_benchmark.cpp
benchmarks/rotators/: CMakeLists.txt
benchmarks/rotators/code/private/: rotator_benchmark.cpp
dependencies/: glfw.module.json  imgui_glfw_cmake.module.json  magic_enum.module.json
examples/compute_shader/: CMakeLists.txt
examples/compute_shader/code/private/: compute_shader_example.cpp
examples/compute_shader/content/shaders/compute_shader/: compute_shader.comp  compute_shader.shader.json
examples/compute_shader/content/shaders/just_color_3d/: just_color_3d.frag
examples/curve/: CMakeLists.txt  klgl_curve_example.module.json
examples/curve/code/private/: curve_example.cpp
examples/curve/content/shaders/curve_example/curve2d/: curve2d.geom  curve2d.tesc  curve2d.tese
examples/curve_fractal/: CMakeLists.txt
examples/curve_fractal/code/private/: curve_fractal_example.cpp  fractal_settings.cpp  fractal_settings.hpp
examples/falling_sand/: CMakeLists.txt
examples/falling_sand/code/private/: falling_sand_example.cpp
examples/fractal/: CMakeLists.txt
examples/fractal/code/private/: clipboard_windows.cpp  fractal_app.cpp  fractal_app.hpp  fractal_example.cpp  fractal_example_main.cpp  fractal_settings.cpp  fractal_settings.hpp  interpolation_widget.cpp  interpolation_widget.hpp
examples/fractal/code/private/renderers/: counting_renderer.cpp  counting_renderer.hpp  fractal_renderer.hpp  simple_cpu_renderer.cpp  simple_cpu_renderer.hpp  simple_gpu_renderer.cpp  simple_gpu_renderer.hpp
examples/fractal/content/shaders/counting_fractal_compute/: counting_fractal_compute.comp
examples/fractal/content/shaders/fractal/: fractal.frag  fractal.shader.json  fractal.vert
examples/fractal/content/shaders/interpolation_widget/: interpolation_widget.frag  interpolation_widget.shader.json  interpolation_widget.vert
examples/geometry_shader/: CMakeLists.txt
examples/geometry_shader/code/private/: geometry_shader_example.cpp
examples/geometry_shader/content/shaders/: points_to_quads_2d.shader.json
examples/geometry_shader/content/shaders/points_to_quads_2d/: points_to_quads_2d.frag  points_to_quads_2d.geom  points_to_quads_2d.shader.json
examples/geometry_shader/content/shaders/src/: points_to_quads_2d.vert
examples/minimal_cube/: CMakeLists.txt
examples/minimal_cube/code/private/: main.cpp  minimal_cube_example.cpp
examples/minimal_cube/content/shaders/just_color_3d/: just_color_3d.shader.json
examples/minimal_cube/content/shaders/src/: just_color_3d.vert
examples/minimal_quad/: CMakeLists.txt
examples/minimal_quad/code/private/: main.cpp  minimal_quad_example.cpp
examples/minimal_quad/content/shaders/just_color_2d/: just_color_2d.shader.json
examples/minimal_quad/content/shaders/src/: just_color_2d.vert
examples/painter2d/: CMakeLists.txt  klgl_painter2d_example.module.json
examples/painter2d/code/private/: painter2d_example.cpp
examples/pendulum/: CMakeLists.txt
examples/pendulum/code/private/: pendulum_example.cpp
examples/post_processing/: CMakeLists.txt
examples/post_processing/code/private/: post_processing_example.cpp
examples/posteffect/: CMakeLists.txt
examples/posteffect/code/private/: posteffect_example.cpp
examples/render_to_texture/: CMakeLists.txt  klgl_render_to_texture_example.module.json
examples/render_to_texture/code/private/: render_to_texture_example.cpp
examples/simple_lit_cube/: CMakeLists.txt
examples/simple_lit_cube/code/private/: simple_lit_cube_example.cpp
examples/simple_lit_cube/content/shaders/: basic_light_3d.shader.json
examples/simple_lit_cube/content/shaders/basic_light_3d/: basic_light_3d.frag
examples/simple_lit_cube/content/shaders/src/: basic_light_3d.vert
examples/tetris/: CMakeLists.txt
examples/tetris/code/private/: prefabs.hpp  tetris_example.cpp
examples/textured_quad/: CMakeLists.txt
examples/textured_quad/code/private/: textured_quad_example.cpp
examples/textured_quad/content/shaders/src/: textured_quad_2d.vert
examples/two_textures/: CMakeLists.txt
examples/two_textures/code/private/: main.cpp  two_textures_example.cpp
examples/two_textures/content/shaders/: two_textures_2d.shader.json
klgl/: CMakeLists.txt  klgl.module.json
klgl/code/private/: application.cpp  error_handling.cpp  window.cpp
klgl/code/private/camera/: camera3d.cpp  camera_2d.cpp  camera_3d.cpp
klgl/code/private/filesystem/: filesystem.cpp
klgl/code/private/math/: transform.cpp
klgl/code/private/memory/: type_erased_array.cpp
klgl/code/private/mesh/: mesh_data.cpp  procedural_mesh_generator.cpp
klgl/code/private/name_cache/: name.cpp  name_cache.cpp
klgl/code/private/opengl/: gl_api.cpp  program_info.cpp
klgl/code/private/rendering/: curve_renderer_2d.cpp  painter2d.cpp
klgl/code/private/shader/: shader.cpp  shader_define.cpp  shader_uniform.cpp
klgl/code/private/texture/: procedural_texture_generator.cpp  texture.cpp  texture_format_helper.cpp
klgl/code/private/ui/: simple_imgui_combo.cpp  type_id_widget.cpp
klgl/code/public/klgl/: application.hpp  error_handling.hpp  window.hpp
klgl/content/shaders/klgl/: painter2d.shader.json
klgl_tests/: CMakeLists.txt
klgl_tests/code/private/: rotator_tests.cpp
samples/minimal_cube/: CMakeLists.txt
samples/minimal_cube/code/private/: main.cpp
samples/minimal_quad/: CMakeLists.txt
samples/minimal_quad/code/private/: main.cpp
samples/minimal_quad/content/shaders/src/: just_color.vert
samples/textured_quad/: CMakeLists.txt
samples/textured_quad/code/private/: main.cpp
samples/textured_quad/content/shaders/src/: just_color.frag
samples/two_textures/: CMakeLists.txt
samples/two_textures/code/private/: main.cpp
samples/two_textures/content/shaders/: two_textures.shader.json
samples/two_textures/content/shaders/src/: two_textures.vert
tests/code/private/: type_erased_array_tests.cpp
(+138 files in other folders)
